--- a/root2/exo.css
+++ b/root2/exo.css
@@ -20,6 +20,11 @@
     display: flex;
 }
 
+.divform2
+{
+    margin-right: 50px;
+}
+
 .Pblack
 {
     color: black;
@@ -64,6 +69,14 @@ h5
     margin-top: 20px;
 }
 
+h6
+{
+    font-family: Verdana;
+    font-size: 12px;
+    color: orangered;
+    margin-bottom: 5px;
+    margin-top: 10px;
+}
 p
 {
     font-family: Verdana;
@@ -93,5 +106,10 @@ p
 label {
     padding-right: 10px;
     font-size: 1rem;
-    display: ;
+    display: table-column;
+}
+
+progress
+{
+    background-color: #185300;
 }
